--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hearthstone-like",
   "version": "0.1.0",
   "private": "true",
+  "main": "app.js",
   "dependencies": {
     "socket.io": "1.3.5",
     "express": "4.12.4"
